# autonomous-inbox-os

./: DEPLOY_AND_SUBMIT.py  Dockerfile  HF_README_HEADER.md  README.md  __init__.py  baseline_scores.json  inference.py  models.py  openenv.yaml  pyproject.toml  validate.py
data/: emails.json
server/: app.py  environment.py  requirements.txt
static/: index.html
tests/: test_environment.py
